Bug 170202 - FILESAVE PPTX Presentations with physics animations become invalid when saved to PPTX
Summary: FILESAVE PPTX Presentations with physics animations become invalid when saved...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
7.1.0.3 release
Hardware: All All
: medium normal
Assignee: Aron Budea
URL:
Whiteboard: target:26.8.0 target:26.2.0.2 target:...
Keywords:
Depends on:
Blocks: PPTX-Corrupted PPTX-Animations
  Show dependency treegraph
 
Reported: 2026-01-02 13:14 UTC by Aron Budea
Modified: 2026-01-07 09:39 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Aron Budea 2026-01-02 13:14:04 UTC
Open attachment 164886 [details] from bug 136301, save it as PPTX, and try opening the result in PowerPoint.

PowerPoint will fail to open the file cleanly.

This is due to the incomplete export of animation elements in ppt/slides/slide1.xml, as exporting the new physics animations is unsupported. A solution would be to avoid exporting those elements completely.
Comment 1 Commit Notification 2026-01-03 02:05:56 UTC
Aron Budea committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f3943837d75695bc351a55340addd362de33097b

tdf#170202 avoid exporting ANIMATIONPHYSICS node types

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2026-01-05 11:28:43 UTC
Aron Budea committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/8a7dcdc302c50b1357fef90359922a58b24f5e51

tdf#170202 avoid exporting ANIMATIONPHYSICS node types

It will be available in 26.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2026-01-06 14:47:10 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ce17fd24dc4dd0732cd974e8b615fdc181229b15

tdf#170202: sd_export_tests-ooxml4: Add test

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2026-01-07 09:39:17 UTC
Aron Budea committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/063ca7de9b47cc92d1a5f10fae6e475e7693e165

tdf#170202 avoid exporting ANIMATIONPHYSICS node types

It will be available in 25.8.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.