tdf#170202 avoid exporting ANIMATIONPHYSICS node types

Implement cbf102d4c1ba73519b49df0d43a87ebdf9267538 differently.

After previous commit, tdf136301-1.odp still contained
animation elements in slide1.xml when converted to PPTX, and
couldn't be opened in PP.

Set such nodes invalid instead to avoid processing them at all.

Change-Id: I799026c389681b89792bb9765b8f81562743deb4
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/196424
Reviewed-by: Aron Budea <aron.budea@collabora.com>
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
(cherry picked from commit f3943837d75695bc351a55340addd362de33097b)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/196441
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
(cherry picked from commit 8a7dcdc302c50b1357fef90359922a58b24f5e51)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/196561