sd/source/filter/eppt/pptx-animations-nodectx.cxx
@@ -188,6 +188,11 @@ void NodeContext::initValid(bool bHasValidChild, bool bIsIterateChild)
             }
         }
     }
+    else if (nType == AnimationNodeType::ANIMATEPHYSICS)
+    {
+        // Ignore: we don't support exporting this node type
+        mbValid = false;
+    }
     else
     {
         Reference<XAnimate> xAnimate(mxNode, UNO_QUERY);
