sd/source/filter/eppt/pptx-animations.cxx
@@ -951,28 +951,18 @@ void PPTXAnimationExport::WriteAnimationNodeCommonPropsStart()
     if (!aChildNodes.empty())
     {
         bool bSubTnLst = false;
-        bool bWroteChildTnList = false;
+        mpFS->startElementNS(XML_p, XML_childTnLst);
         for (const NodeContextPtr& pChildContext : aChildNodes)
         {
             if (pChildContext->isValid())
             {
                 if (pChildContext->isOnSubTnLst())
                     bSubTnLst = true;
-                else if (pChildContext->getNode()->getType() == AnimationNodeType::ANIMATEPHYSICS)
-                    ; // ignore we don't support exporting this node type
                 else
-                {
-                    if (!bWroteChildTnList)
-                    {
-                        bWroteChildTnList = true;
-                        mpFS->startElementNS(XML_p, XML_childTnLst);
-                    }
                     WriteAnimationNode(pChildContext);
-                }
             }
         }
-        if (bWroteChildTnList)
-            mpFS->endElementNS(XML_p, XML_childTnLst);
+        mpFS->endElementNS(XML_p, XML_childTnLst);
 
         if (bSubTnLst)
         {
